Under 10ms average p99